bk_ida/gccida/g0/emit_prefetch_instructions
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4225:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4230:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4232:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4236:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4238:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4249:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // [rsp+1630h] [rbp-B0h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4249:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // [rsp+1630h] [rbp-B0h] 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4266:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv1; // [rsp+16A8h] [rbp-38h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4266:14: error: use of undeclared identifier 'biv1'
induction_1 *biv1; // [rsp+16A8h] [rbp-38h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4267:1: error: use of undeclared identifier 'induction_1'
induction_1 *iv; // [rsp+16B0h] [rbp-30h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4267:14: error: use of undeclared identifier 'iv'
induction_1 *iv; // [rsp+16B0h] [rbp-30h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4294:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4296:7: error: use of undeclared identifier 'biv1'; did you mean 'ivs'?
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
      ^~~~
      ivs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4259:19: note: 'ivs' declared here
 struct loop_ivs *ivs; // [rsp+1678h] [rbp-68h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4296:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4296:19: error: use of undeclared identifier 'biv1'
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4296:25: error: use of undeclared identifier 'biv1'; did you mean 'ivs'?
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
                        ^~~~
                        ivs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4259:19: note: 'ivs' declared here
 struct loop_ivs *ivs; // [rsp+1678h] [rbp-68h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4296:32: error: use of undeclared identifier 'biv1'
for ( biv1 = biv; biv1; biv1 = biv1->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4298:17: error: use of undeclared identifier 'biv'
if ( *( _WORD *)biv->add_val != 54 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/loop.c:4305:1: error: use of undeclared identifier 'biv'
biv->src_reg->fld[0].rtuint, 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_prefetch_instructions/src/obj/loop.o] Error 1
